--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-parallax-tilt": "^1.7.217"
+    "react-parallax-tilt": "^1.7.217",
+    "three": "^0.162.0",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.162.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
